# vulkanengine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  buildlibs.bat  buildlibs.sh  cmpcmd.bat  cmpcmd.sh  cmpshaders.bat  cmpshaders.sh  run.bat  run.sh
inc/: tiny_obj_loader.h
inc/KHR/: khr_df.h
inc/imgui/: dcimgui.cpp  dcimgui.h  dcimgui_impl_sdl3.cpp  dcimgui_impl_sdl3.h  dcimgui_impl_vulkan.cpp  dcimgui_impl_vulkan.h  dcimgui_internal.cpp  dcimgui_internal.h  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl3.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
src/: editor.c  log.h  main.c  renderer.h  scene.c  scene.h  transform.c  transform.h  types.h  vma_impl.cpp
src/shaders/: post.slang  shader.slang
